[tool.poetry]
name = "githubpages"
version = "0.1.0"
description = ""
authors = ["John Zhang <zz.john.cn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
sphinx = "^1.8"
sphinx-rtd-theme = "^0.4.2"
flake8 = "^3.6"
pylint = "^2.1"
mypy = "^0.641.0"
yapf = "^0.24.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
